Modif dashboard twig

--- a/templates/Admin/Admin/dashboard.html.twig
+++ b/templates/Admin/Admin/dashboard.html.twig
@@ -4,4 +4,122 @@
 
 <h1>Bienvenue sur notre page Admin</h1>
 
+<div>
+    <h2>
+        Utilisateur
+    </h2>
+    <div>
+        <button>
+            Ajouter
+        </button>
+        <button>
+            List
+        </button>
+        <button>
+            Supprimer
+        </button>
+    </div>
+</div>
+
+<div>
+    <h2>
+        Addresse
+    </h2>
+    <div>
+        <button>
+            Ajouter
+        </button>
+        <button>
+            List
+        </button>
+        <button>
+            Supprimer
+        </button>
+    </div>
+</div>
+
+<div>
+    <h2>
+        Auteurs
+    </h2>
+    <div>
+        <button>
+            Ajouter
+        </button>
+        <button>
+            List
+        </button>
+        <button>
+            Supprimer
+        </button>
+    </div>
+</div>
+
+<div>
+    <h2>
+        Maison d'éditions
+    </h2>
+    <div>
+        <button>
+            Ajouter
+        </button>
+        <button>
+            List
+        </button>
+        <button>
+            Supprimer
+        </button>
+    </div>
+</div>
+
+<div>
+    <h2>
+        catégories
+    </h2>
+    <div>
+        <button>
+            Ajouter
+        </button>
+        <button>
+            List
+        </button>
+        <button>
+            Supprimer
+        </button>
+    </div>
+</div>
+
+<div>
+    <h2>
+        Livres
+    </h2>
+    <div>
+        <button>
+            Ajouter
+        </button>
+        <button>
+            List
+        </button>
+        <button>
+            Supprimer
+        </button>
+    </div>
+</div>
+
+<div>
+    <h2>
+        Commandes
+    </h2>
+    <div>
+        <button>
+            Ajouter
+        </button>
+        <button>
+            List
+        </button>
+        <button>
+            Supprimer
+        </button>
+    </div>
+</div>
 {% endblock %}
