--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <form method="post">
-    {% if error %}
+    {# {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
@@ -12,7 +12,7 @@
         <div class="mb-3">
             Vous êtes connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Deconnexion</a>
         </div>
-    {% endif %}
+    {% endif %} #}
 
     <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
     <label for="inputEmail">Email</label>
