--- a/templates/Admin/AdminAuthor/list.html.twig
+++ b/templates/Admin/AdminAuthor/list.html.twig
@@ -1,17 +1,34 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
+<h1>Auteurs</h1>
+
+<button><a href="{{ path('app_admin_adminAuthor_create') }}">Ajouter</a></button>
+
+    <table>
+        <tr>
+            <th>Nom</th>
+            <th>Description</th>
+            <th>Livres</th>
+            <th>Actions</th>
+        </tr>
     
     {% for author in authors %}
-    
-        <ul>
-            <li>{{ author.name}}</li>
-            <li>{{ author.description}}</li>
+        <tr>
+
+            <td>{{ author.name}}</td>
+            <td>{{ author.description}}</td>
+             <td>
             {% for book in author.books %}
-                <li>{{ book.title }}</li>
+                {{ book.title }}
             {% endfor %}
-        </ul>
+            </td>
+            <td>
+                <button><a href="{{ path('app_admin_adminAuthor_update', {'id':author.id}) }}">Modifier</a></button>
+                <button><a href="{{ path('app_admin_adminAuthor_delete', {'id':author.id}) }}">Supprimer</a></button> 
+            </td>
+        </tr>
 
     {% endfor %}
-
+    </table>
 {% endblock %}
