--- a/templates/Admin/Admin/dashboard.html.twig
+++ b/templates/Admin/Admin/dashboard.html.twig
@@ -6,7 +6,7 @@
 
 <div>
     <h2>
-        Utilisateurs
+        Utilisateurs1
     </h2>
     <div>
         <button><a href="{{ path('app_admin_adminUser_create')}}">
