--- a/templates/Admin/Admin/dashboard.html.twig
+++ b/templates/Admin/Admin/dashboard.html.twig
@@ -76,7 +76,7 @@
 
 <div>
     <h2>
-        Livres
+        Livres 1
     </h2>
     <div>
         <button><a href="{{ path('app_admin_adminBook_create')}}">
