retour a la normal

--- a/templates/Admin/Admin/dashboard.html.twig
+++ b/templates/Admin/Admin/dashboard.html.twig
@@ -6,7 +6,7 @@
 
 <div>
     <h2>
-        Utilisateurs1
+        Utilisateurs
     </h2>
     <div>
         <button><a href="{{ path('app_admin_adminUser_create')}}">
@@ -20,11 +20,7 @@
 
 <div>
     <h2>
-<<<<<<< HEAD
         Addresses
-=======
-        Addresses1
->>>>>>> ba7dfd639253af34733093c8964089bf0dcd3cf1
     </h2>
     <div>
         <button><a href="{{ path('app_admin_adminAddress_create')}}">
@@ -80,7 +76,7 @@
 
 <div>
     <h2>
-        Livres 1
+        Livres
     </h2>
     <div>
         <button><a href="{{ path('app_admin_adminBook_create')}}">
