--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}LookBook{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />   
+
         {% endblock %}
 
         {% block javascripts %}
@@ -14,7 +16,38 @@
             
         {% endblock %}
     </head>
+    
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            {% block menu %}
+                <header>
+                    <h1 id="logo">LookBook</h1>
+                    <nav>
+                        <ul>
+                            <li class="link link--underline">
+                            <a href="{{ path('app_front_front_home') }}">
+                            Accueil</a>
+                            </li>
+                            <li class="link link--underline">
+                            <a href="{{ path('app_admin_adminBook_list') }}">
+                            Livres</a>
+                            </li>
+                            <li class="link link--underline">
+                            <a href="#">
+                            Contact</a>
+                            </li>
+                            <li><i class="far fa-user"></i></li>
+                            {% block cart %}
+                            <li><i class="fas fa-shopping-bag"></i></li>
+                            {% endblock %}
+                        </ul>
+                    </nav>
+                </header>
+            {% endblock %}   
+            {% block adminDash %} 
+            {% endblock %}
+            {% block frontHome %} 
+            {% endblock %}        
+        {% endblock %}
     </body>
 </html>
