correction erreur book

--- a/templates/Front/Front/auteur-show.html.twig
+++ b/templates/Front/Front/auteur-show.html.twig
@@ -5,7 +5,7 @@
         <tr>
             <th>Nom auteur</th>
             <th>Description</th>
-            <th></th>
+            <th>Livres</th>
         </tr>
         <tr>
                 <td>{{ author.name}}</td>
